# Reel_Automation

./: .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  skills-lock.json
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/agents/: creator_packet.py  cross_verification.py  deep_research.py  editorial_critic.py  evidence_extraction.py  report.py  research_planner.py  source_discovery.py  synthesis.py  tts_supervisor.py
backend/app/analytics/: __init__.py  base.py  fakes.py  feedback.py  youtube.py
backend/app/api/: __init__.py  deps.py  health.py  research.py  reviews.py  router.py  videos.py
backend/app/channels/: __init__.py  fakes.py  schemas.py  store.py
backend/app/cli/: __init__.py  doctor.py  make_video.py  plan.py  run_loop.py
backend/app/client/: __init__.py  client.py
backend/app/core/: __init__.py  config.py  lifecycle.py  logging.py  run_context.py
backend/app/eval/: __init__.py  harness.py  judge.py  report.py  task.py
backend/app/media/: __init__.py  audio.py  narration.py  pipeline.py  schemas.py  thumbnail.py
backend/app/media/alignment/: __init__.py  aeneas.py  base.py
backend/app/media/composition/: __init__.py  base.py  ffmpeg.py  loudness.py
backend/app/media/qc/: gate.py  probe.py  report.py  rubric.py  service.py
backend/app/media/subtitles/: __init__.py  base.py
backend/app/media/tts/: __init__.py  base.py  http_tts.py  huggingface.py  kokoro.py  nvidia.py  openai_tts.py  qa.py  qa_loop.py  router.py  segmented.py  supervised.py
backend/app/media/visuals/: __init__.py  base.py  generative.py  generative_router.py  stock.py
backend/app/publishing/: __init__.py  base.py  skeletons.py  youtube.py
backend/app/review/: __init__.py  base.py  errors.py  record.py  service.py
backend/app/safety/: __init__.py  gate.py  verdict.py
backend/app/scheduler/: __init__.py  closed_loop.py  queue.py  runner.py  schedule.py
backend/app/schemas/: __init__.py  health.py  research_state.py
backend/app/scripting/: __init__.py  builder.py  schemas.py
backend/app/seo/: __init__.py  metadata.py
backend/app/services/: composition.py  deep_research.py
backend/app/services/budget/: __init__.py  provider.py  tracker.py
backend/app/services/ingestion/: __init__.py  base.py  chunker.py  fake_transcript.py  fakes.py  httpx_fetch.py  parser.py  pdf_parser.py  service.py  transcript.py  youtube_transcript_provider.py
backend/app/services/jobs/: __init__.py  base.py  sqlite_store.py  store.py
backend/app/services/llm/: __init__.py  base.py  cache.py  factory.py  fakes.py  gemini.py  openai_compatible.py  policy.py  providers.py  resilience.py  router.py
backend/app/services/publishing/: __init__.py  caveats.py  citations.py  html.py  markdown.py  warnings.py
backend/app/services/reasoning/: __init__.py  claim_blocking.py  coverage.py
backend/app/services/runlog/: __init__.py  events.py  records.py  sink.py
backend/app/services/search/: __init__.py  base.py  brave_search.py  fakes.py  live.py
backend/app/services/video/: __init__.py  jobs.py  pipeline.py
backend/app/tools/: __init__.py  deep_research.py
backend/app/topics/: __init__.py  base.py  fakes.py  live.py  selection.py
backend/app/workflows/: deep_research.py
backend/tests/: conftest.py  test_health.py
backend/tests/agents/: test_creator_packet.py  test_cross_verification.py  test_editorial_critic.py  test_evidence_extraction.py  test_report.py  test_research_planner.py  test_source_discovery.py  test_synthesis.py  test_tts_supervisor.py
backend/tests/analytics/: test_base_and_fakes.py  test_feedback.py  test_youtube.py
backend/tests/api/: test_lifecycle.py  test_research.py  test_reviews.py  test_videos.py
backend/tests/channels/: test_schemas.py  test_store.py
backend/tests/cli/: test_doctor.py
backend/tests/client/: test_client.py
backend/tests/core/: test_config.py  test_lifecycle.py  test_logging.py
backend/tests/eval/: test_harness.py  test_planner_task.py
backend/tests/integration/: test_live_brave_search.py  test_live_fetch.py  test_live_gemini.py  test_live_http_tts.py  test_live_huggingface_tts.py  test_live_llm.py  test_live_nvidia_tts.py  test_live_openai_tts.py  test_live_search.py  test_live_stock_visuals.py  test_live_trends.py  test_live_youtube.py  test_live_youtube_analytics.py  test_live_youtube_publish.py  test_pipeline_e2e.py  test_pipeline_live.py
backend/tests/media/: test_audio.py  test_narration.py  test_pipeline.py  test_thumbnail.py  wav_fakes.py
backend/tests/media/alignment/: test_aeneas.py  test_base.py
backend/tests/media/composition/: test_fakes.py  test_ffmpeg.py  test_loudness.py
backend/tests/media/qc/: test_gate.py  test_probe.py  test_report.py  test_rubric.py  test_service.py
backend/tests/media/schemas/: test_schemas.py
backend/tests/media/subtitles/: test_formatters.py
backend/tests/media/tts/: test_fakes.py  test_http_tts.py  test_huggingface.py  test_kokoro.py  test_nvidia.py  test_openai_tts.py  test_qa.py  (+3 more)
backend/tests/perf/: conftest.py  harness.py  test_claim_blocking_perf.py  test_run_research_perf.py
backend/tests/publishing/: test_base.py  test_skeletons.py  test_youtube.py
backend/tests/review/: test_service.py
backend/tests/runlog/: test_events.py  test_sink.py
backend/tests/safety/: test_gate.py
backend/tests/scheduler/: test_closed_loop.py  test_queue.py  test_runner.py  test_schedule.py
backend/tests/schemas/: test_research_state.py  test_research_state_properties.py
backend/tests/scripting/: test_builder.py
backend/tests/seo/: test_metadata.py
backend/tests/services/: test_composition.py
backend/tests/topics/: test_base.py  test_fakes.py  test_live.py  test_selection.py
backend/tests/workflows/: test_deep_research.py
(+179 files in other folders)
