[project]
name = "reel-automation-backend"
version = "0.1.0"
description = "Backend scaffold for the Reel Automation platform."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "langgraph>=1.0,<2.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pypdf>=5.0,<6.0",  # pure-Python PDF text extraction (ADR 0014)
    "python-dotenv>=1.0,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "ruff>=0.15,<0.16",
    "mypy>=1.13,<2.0",
    # Property-based tests for the schema layer (network-gated; PyPI unreachable
    # in the sandbox). `tests/schemas/test_research_state_properties.py`
    # `importorskip`s it, so the suite stays green offline; the properties run
    # wherever it is installed (CI, local dev with extras).
    "hypothesis>=6.0,<7.0",
]
# YouTube transcript ingestion (network-gated; PyPI unreachable in the sandbox).
# Lazy-imported in `youtube_transcript_provider.py` so the package imports clean
# without this extra installed. See ADR 0015.
youtube = [
    "youtube-transcript-api>=1.0,<2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
# Default run is hermetic; integration (network/credential) tests run via -m integration.
addopts = "-m 'not integration'"
markers = [
    "integration: live external-service tests requiring network/credentials (run with -m integration)",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
# Conservative baseline; ratchet up in PR #5's coding-standards ADR.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "W",    # pycodestyle warnings
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "RUF",  # ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.mypy]
python_version = "3.11"
mypy_path = "."
packages = ["app"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

# Optional 'youtube' extra; unreachable from the sandbox (no PyPI). Lazy-imported.
[[tool.mypy.overrides]]
module = ["youtube_transcript_api.*"]
ignore_missing_imports = true

# pypdf is lazily imported and may be absent in the offline build sandbox; allow
# mypy to type-check the rest of the module without its stubs (ADR 0014). pypdf
# ships ``py.typed``, so when installed this override is a harmless no-op.
[[tool.mypy.overrides]]
module = "pypdf"
ignore_missing_imports = true

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
